fix text align for form

--- a/public/styles.css
+++ b/public/styles.css
@@ -36,6 +36,7 @@ a {
 
 .form-container {
   padding: 2% 25% 4% 25%; 
+  text-align: center;
 }
 
 .form-container div {
